[Java] Tidy of dynamic class loading from config.